# sales-marketing-nanobot-swarm

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements.txt  vercel.json
.devcontainer/: devcontainer.json
api/: index.py  requirements.txt
docs/: README.md
nanobot/: __init__.py
nanobot/api/: gateway.py
nanobot/scheduler/: __init__.py  agent_teams.py
nanobot/static/: auth.html  checkout-cancel.html  checkout-success.html  docs-page.html  faq.html  index.html  landing.html  onboard.html  pricing.html  profile.html  progress.html
nanobot/teams/: __init__.py  salesmarketing_teams.py
nanobot/tools/: __init__.py  base.py  salesmarketing_tools.py
scripts/: launch.sh  setup.sh
tests/: test_imports.py
